Rearrange for building with SPM

--- a/.gitignore
+++ b/.gitignore
@@ -122,4 +122,15 @@ iOSInjectionProject/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+### SPM bits
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/config/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
+
 # End of https://www.toptal.com/developers/gitignore/api/xcode,objective-c,macos,vscode
